--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Facebook App Opet</string>
-    <string name="facebook_app_id">MUDAR AQUI</string>
+    <string name="facebook_app_id">109180626449780</string>
 </resources>
